--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,14 @@
             <!-- If you have any intent-filters, they should go here -->
         </activity>
 
+        <activity android:name=".ProfileActivity">
+            <!-- Intent filters (if any) go here -->
+        </activity>
+
+        <activity android:name=".SettingsActivity">
+            <!-- Intent filters (if any) go here -->
+        </activity>
+
     </application>
 
 </manifest>
